# debugforge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  WINDOWS_SSH_SETUP.md  add_firewall_rule.bat  config_auto.t32.example  debugforge-workflow.md  debugforge.example.toml  debugforge.toml.example  pyproject.toml  remote_rcl_config.t32  setup_remote_t32.sh  t32_debugforge.t32
.debugforge/skills/: hardfault-analysis.md  peripheral-init-failure.md  pyrcl-remote-debugging.md  stack-overflow-verification.md  stack-overflow.md  trap-analysis.md
.github/workflows/: ci.yml
docs/specs/: 2026-06-30-mcp-trace32-design.md
docs/superpowers/plans/: 2026-06-30-mcp-trace32-implementation.md
examples/: debug_tc397_live.py  remote_debug.py  remote_debug_tc38x.py  test_all_tools.py
src/debugforge/: __init__.py  __main__.py  config.py  server.py  state.py
src/debugforge/tools/: benchmark.py  breakpoints.py  breakpoints_advanced.py  build.py  commands.py  connection.py  debug_advanced.py  execution.py  memory.py  multicore.py  notifications.py  registers.py  skills.py  symbols.py  system_config.py  trace.py  variables.py  views.py  watchpin.py  workflow.py
src/mcp_trace32/: __init__.py  __main__.py  server.py
src/mcp_trace32/tools/: __init__.py  breakpoints.py  breakpoints_advanced.py  commands.py  connection.py  debug_advanced.py  execution.py  memory.py  registers.py  symbols.py  variables.py  views.py
tests/: config_sim.t32  conftest.py  test_breakpoints.py  test_build.py  test_commands.py  test_config.py  test_connection.py  test_execution.py  test_memory.py  test_registers.py  test_skills.py  test_symbols.py  test_variables.py  test_views.py  test_workflow.py
