[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debugforge"
version = "0.1.0"
description = "DebugForge — AI-powered debugging for Lauterbach TRACE32. MCP server enabling AI agents to perform hardware debugging."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "lixiang" },
]
keywords = ["mcp", "trace32", "lauterbach", "debugger", "embedded", "ai-agent", "debugforge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "lauterbach-trace32-rcl>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
debugforge = "debugforge.server:main"

[project.urls]
Homepage = "https://github.com/lixiang/debugforge"
Repository = "https://github.com/lixiang/debugforge"
Issues = "https://github.com/lixiang/debugforge/issues"
