[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debugforge"
version = "0.1.0"
description = "DebugForge — MCP server that connects Lauterbach TRACE32 debuggers to AI agents for autonomous debugging."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "YangPan" },
]
keywords = ["mcp", "trace32", "lauterbach", "debugger", "embedded", "ai-agent", "debugforge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "lauterbach-trace32-rcl>=1.1.0",
    "tomli>=1.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
debugforge = "debugforge.server:main"

[project.urls]
Homepage = "https://github.com/YangPan2020/debugforge"
Repository = "https://github.com/YangPan2020/debugforge"
Issues = "https://github.com/YangPan2020/debugforge/issues"
